tests/idris2/perror029/expected
1/1: Building DelayParse (DelayParse.idr)
Error: Delay only takes one argument.

DelayParse:13:44--13:46
 09 | 
 10 | public export
 11 | go : a -> (a -> a) -> MyStream
 12 | go initA fn =
 13 |   MyStream.(::) initA fn (Delay (fn initA) fn)
                                                 ^^

